# wordcount

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
assets/: dictionary_light.txt  dictionary_medium.txt  input_light.txt  input_light_2.txt  input_medium.txt
include/wordcount/: suffix_tree.h  wordcount.h
source/: main.c  suffix_tree.c  wordcount.c
